Oops fixed navbar covering page

--- a/_harp/public/_navbar.less
+++ b/_harp/public/_navbar.less
@@ -28,6 +28,7 @@
 	margin-right: auto;
 	padding-left: @grid-gutter-width/2;
 	padding-right: @grid-gutter-width/2;
+	height: 0;
 }
 
 .jh-nav-contents {
